--- a/zerosaku/Zerosaku.ipynb
+++ b/zerosaku/Zerosaku.ipynb
@@ -1036,9 +1036,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.34985881 18.17414537 54.59815003]\n"
+     ]
+    }
+   ],
    "source": [
     "# 3.5\n",
     "# 恒等関数（こうとうかんすう）\n",
@@ -1046,8 +1054,151 @@
     "import numpy as np\n",
     "\n",
     "a = np.array([0.3, 2.9, 4.0])\n",
-    "exp_a = np.exp(a) # 指数関数\n"
+    "exp_a = np.exp(a) # 指数関数\n",
+    "print(exp_a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.1221542101633\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_exp_a = np.sum(exp_a)\n",
+    "print(sum_exp_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01821127 0.24519181 0.73659691]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = exp_a / sum_exp_a\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(a):\n",
+    "    exp_a = np.exp(a)\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a / sum_exp_a\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.99954600e-01, 4.53978686e-05, 2.06106005e-09])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "a = np.array([1010, 1000, 990])\n",
+    "# np.exp(a) / np.sum(np.exp(a))\n",
+    "# 正しく計算されない\n",
+    "\n",
+    "c = np.max(a)\n",
+    "a - c\n",
+    "\n",
+    "np.exp(a - c) / np.sum(np.exp(a - c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# softmax関数\n",
+    "\n",
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c) # オーバーフロー対策\n",
+    "    sum_exp_a = np.sum(exp_a) # numpyのarrayの合計値ですでに一つ上で対策済み\n",
+    "    y = exp_a / sum_exp_a\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01821127 0.24519181 0.73659691]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([0.3, 2.9, 4.0])\n",
+    "y = softmax(a)\n",
+    "print(y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
