--- a/zerosaku/Zerosaku.ipynb
+++ b/zerosaku/Zerosaku.ipynb
@@ -1195,10 +1195,349 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3.6\n",
+    "\n",
+    "import sys, os\n",
+    "sys.path.append(os.pardir)\n",
+    "from dataset.mnist import load_mnist\n",
+    "\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 784)\n",
+      "(60000,)\n",
+      "(10000, 784)\n",
+      "(10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape) \n",
+    "print(t_train.shape)\n",
+    "print(x_test.shape)\n",
+    "print(t_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "(784,)\n",
+      "(28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, os\n",
+    "sys.path.append(os.pardir)\n",
+    "import numpy as np\n",
+    "from dataset.mnist import load_mnist\n",
+    "from PIL import Image\n",
+    "\n",
+    "def img_show(img):\n",
+    "    pil_img = Image.fromarray(np.uint8(img))\n",
+    "    pil_img.show()\n",
+    "\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=False)\n",
+    "\n",
+    "img = x_train[0]\n",
+    "label = t_train[0]\n",
+    "print(label) # 5\n",
+    "print(img.shape) # (784,)\n",
+    "\n",
+    "img = img.reshape(28, 28) # 形状を元の画像サイズに変形 \n",
+    "print(img.shape) # (28, 28)\n",
+    "\n",
+    "img_show(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:0.9352\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def get_data():\n",
+    "    (x_train, t_train), (x_test, t_test) = \\\n",
+    "        load_mnist(normalize=True, flatten=True, one_hot_label=False)\n",
+    "    return x_test, t_test\n",
+    "\n",
+    "def init_network():\n",
+    "    with open(\"/Users/yamato/Src/LSTM-midi/zerosaku/sample_weight.pkl\", 'rb') as f: \n",
+    "        network = pickle.load(f)\n",
+    "        \n",
+    "    return network\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c) # オーバーフロー対策\n",
+    "    sum_exp_a = np.sum(exp_a) # numpyのarrayの合計値ですでに一つ上で対策済み\n",
+    "    y = exp_a / sum_exp_a\n",
+    "    return y\n",
+    "\n",
+    "def predict(network, x):\n",
+    "    W1, W2, W3 = network['W1'], network['W2'], network['W3']\n",
+    "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
+    "    a1 = np.dot(x, W1) + b1\n",
+    "    z1 = sigmoid(a1)\n",
+    "    a2 = np.dot(z1, W2) + b2\n",
+    "    z2 = sigmoid(a2)\n",
+    "    a3 = np.dot(z2, W3) + b3\n",
+    "    y = softmax(a3)\n",
+    "    \n",
+    "    return y\n",
+    "\n",
+    "x, t = get_data()\n",
+    "network = init_network()\n",
+    "\n",
+    "batch_size = 100 # batch size\n",
+    "accuracy_cnt = 0\n",
+    "\n",
+    "for i in range(0, len(x), batch_size):\n",
+    "    x_batch = x[i:i+batch_size]\n",
+    "    y_batch = predict(network, x_batch)\n",
+    "    p = np.argmax(y_batch, axis=1) # 最も確率の高い要素のインデックスを取得\n",
+    "    accuracy_cnt += np.sum(p == t[i:i+batch_size])\n",
+    "\n",
+    "print(\"Accuracy:\" + str(float(accuracy_cnt) / len(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/yamato/Src/LSTM-midi\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "%cd ~/Src/LSTM-midi/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 784)\n",
+      "(784,)\n",
+      "(784, 50)\n",
+      "(50, 100)\n",
+      "(100, 10)\n",
+      "(10,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, _ = get_data()\n",
+    "network = init_network()\n",
+    "W1, W2, W3 = network['W1'], network['W2'], network['W3']\n",
+    "\n",
+    "print(x.shape)\n",
+    "print(x[0].shape)\n",
+    "print(W1.shape)\n",
+    "print(W2.shape)\n",
+    "print(W3.shape)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09750000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "# p83\n",
+    "# chapter 4\n",
+    "\n",
+    "# 4.2.1\n",
+    "import numpy as np\n",
+    "\n",
+    "def mean_squared_error(y, t):\n",
+    "    return 0.5 * np.sum((y-t)**2)\n",
+    "\n",
+    "t = [0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+    "y = [0.1, 0.05, 0.6, 0.0, 0.05, 0.1, 0.0, 0.1, 0.0, 0.0]\n",
+    "print(mean_squared_error(np.array(y), np.array(t)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5975"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = [0.1, 0.05, 0.1, 0.0, 0.05, 0.1, 0.0, 0.6, 0.0, 0.0]\n",
+    "mean_squared_error(np.array(y), np.array(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.510825457099338"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4.2.2\n",
+    "import numpy as np\n",
+    "\n",
+    "def cross_entropy_error(y, t):\n",
+    "    delta = 1e-7\n",
+    "    return -np.sum(t * np.log(y + delta))\n",
+    "\n",
+    "t = [0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+    "y = [0.1, 0.05, 0.6, 0.0, 0.05, 0.1, 0.0, 0.1, 0.0, 0.0]\n",
+    "cross_entropy_error(np.array(y), np.array(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.302584092994546"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = [0.1, 0.05, 0.1, 0.0, 0.05, 0.1, 0.0, 0.6, 0.0, 0.0]\n",
+    "cross_entropy_error(np.array(y), np.array(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 784)\n",
+      "(60000, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.2.3\n",
+    "\n",
+    "import sys, os\n",
+    "sys.path.append(os.pardir)\n",
+    "import numpy as np\n",
+    "from dataset.mnist import load_mnist\n",
+    "\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)\n",
+    "\n",
+    "print(x_train.shape)\n",
+    "print(t_train.shape)\n",
+    "\n",
+    "train_size = x_train.shape[0]\n",
+    "batch_size = 10\n",
+    "batch_mask = np.random.choice(train_size, batch_size)\n",
+    "x_batch = x_train[batch_mask]\n",
+    "t_batch = t_train[batch_mask]\n",
+    "\n",
+    "def cross_entropy_error(y, t):\n",
+    "    if y.ndim == 1:\n",
+    "        t = t.reshape(1, t.size)\n",
+    "        y = y.reshape(1, y.size)\n",
+    "        \n",
+    "    batch_size = y.shape[0]\n",
+    "    return -np.sum(t * np.log(y + 1e-7))/ batch_size\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 4.3\n"
+   ]
   }
  ],
  "metadata": {
