--- a/zerosaku/Zerosaku.ipynb
+++ b/zerosaku/Zerosaku.ipynb
@@ -1981,12 +1981,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220.00000000000003\n",
+      "2.2 110.00000000000001 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.4\n",
+    "\n",
+    "class MulLayer:\n",
+    "    def __init__(self):\n",
+    "        self.x = None\n",
+    "        self.y = None\n",
+    "        \n",
+    "    def forward(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        out = x * y\n",
+    "        \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        dx = dout * self.y\n",
+    "        dy = dout * self.x\n",
+    "        \n",
+    "        return dx, dy\n",
+    "    \n",
+    "class AddLayer:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def forward(self, x, y):\n",
+    "        out = x + y\n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        dx = dout * 1\n",
+    "        dy = dout * 1\n",
+    "        return dx, dy\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "apple = 100\n",
+    "apple_num = 2\n",
+    "tax = 1.1\n",
+    "\n",
+    "# layer\n",
+    "mul_apple_layer = MulLayer()\n",
+    "mul_tax_layer = MulLayer()\n",
+    "\n",
+    "# forward\n",
+    "apple_price = mul_apple_layer.forward(apple, apple_num)\n",
+    "price = mul_tax_layer.forward(apple_price, tax)\n",
+    "\n",
+    "print(price)\n",
+    "\n",
+    "# backward\n",
+    "dprice = 1\n",
+    "dapple_price, dtax = mul_tax_layer.backward(dprice)\n",
+    "dapple, dapple_num = mul_apple_layer.backward(dapple_price)\n",
+    "\n",
+    "print(dapple, dapple_num, dtax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "715.0000000000001\n",
+      "110.00000000000001 2.2 3.3000000000000003 165.0 650\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.4.2\n",
+    "\n",
+    "class MulLayer:\n",
+    "    def __init__(self):\n",
+    "        self.x = None\n",
+    "        self.y = None\n",
+    "        \n",
+    "    def forward(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        out = x * y\n",
+    "        \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        dx = dout * self.y\n",
+    "        dy = dout * self.x\n",
+    "        \n",
+    "        return dx, dy\n",
+    "    \n",
+    "class AddLayer:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def forward(self, x, y):\n",
+    "        out = x + y\n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        dx = dout * 1\n",
+    "        dy = dout * 1\n",
+    "        return dx, dy\n",
+    "    \n",
+    "apple = 100\n",
+    "apple_num = 2\n",
+    "orange = 150\n",
+    "orange_num = 3\n",
+    "tax = 1.1\n",
+    "\n",
+    "# layer\n",
+    "mul_apple_layer = MulLayer() \n",
+    "mul_orange_layer = MulLayer() \n",
+    "add_apple_orange_layer = AddLayer() \n",
+    "mul_tax_layer = MulLayer()\n",
+    "\n",
+    "# forward\n",
+    "apple_price = mul_apple_layer.forward(apple, apple_num) #(1)\n",
+    "orange_price = mul_orange_layer.forward(orange, orange_num) #(2)\n",
+    "all_price = add_apple_orange_layer.forward(apple_price, orange_price) #(3) \n",
+    "price = mul_tax_layer.forward(all_price, tax) #(4)\n",
+    "\n",
+    "# backward\n",
+    "dprice = 1\n",
+    "dall_price, dtax = mul_tax_layer.backward(dprice) #(4)\n",
+    "dapple_price, dorange_price = add_apple_orange_layer.backward(dall_price) #(3) \n",
+    "dorange, dorange_num = mul_orange_layer.backward(dorange_price) #(2)\n",
+    "dapple, dapple_num = mul_apple_layer.backward(dapple_price) #(1)\n",
+    "print(price) # 715\n",
+    "print(dapple_num, dapple, dorange, dorange_num, dtax) # 110 2.2 3.3 165 650\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5.4\n",
-    "\n"
+    "# 5.5\n",
+    "\n",
+    "class Relu:\n",
+    "    def __init__(self):\n",
+    "        self.mask = None\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        self.mask = (x <= 0)\n",
+    "        out = x.copy()\n",
+    "        out[self.mask] = 0\n",
+    "        \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        dout[self.mask] = 0\n",
+    "        dx = dout\n",
+    "        \n",
+    "        return dx\n",
+    "    \n",
+    "class Sigmoid:\n",
+    "    def __init__(self):\n",
+    "        self.out = None\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        out = 1 / (1 + np.exp(-x))\n",
+    "        self.out = out\n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        dx = dout * (1.0 - self.out) * self.out\n",
+    "        return dx"
    ]
   },
   {
@@ -1994,7 +2171,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 5.6\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
