--- a/zerosaku/Zerosaku.ipynb
+++ b/zerosaku/Zerosaku.ipynb
@@ -2168,12 +2168,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5.6\n",
-    "\n"
+    "\n",
+    "import sys, os\n",
+    "sys.path.append(os.pardir)\n",
+    "import numpy as np\n",
+    "from common.layers import *\n",
+    "from common.gradient import numerical_gradient\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "class TwoLayerNet:\n",
+    "    \n",
+    "    def __init__(self, input_size, hidden_size, output_size, weight_init_std=0.01):\n",
+    "        \n",
+    "        # 重みの初期化\n",
+    "        self.param = {}\n",
+    "        self.param['W1'] = weight_init_std * np.random.randn(input_size, hidden_size)\n",
+    "        self.param['b1'] = np.zeros(hidden_size)\n",
+    "        self.param['W2'] = weight_init_std * np.random.randn(hidden_size, output_size)\n",
+    "        self.param['b2'] = np.zeros(output_size)\n",
+    "        \n",
+    "        # レイヤの生成\n",
+    "        self.layers = OrderedDict()\n",
+    "        self.layers['Affine1'] =  Affine(self.param['W1'], self.param['b1'])\n",
+    "        self.layers['Relu1'] = Relu()\n",
+    "        self.layers['Affine2'] = Affine(self.param['W2'], self.param['b2'])\n",
+    "        \n",
+    "        self.lastLayer = SoftmaxWithLoss()\n",
+    "        \n",
+    "    def predict(self, x):\n",
+    "        for layer in self.layers.values():\n",
+    "            x = layer.forward(x)\n",
+    "            \n",
+    "        return x\n",
+    "    \n",
+    "    # x:入力データ、t:教師データ\n",
+    "    def loss(self, x, t):\n",
+    "        y = self.predict(x)\n",
+    "        return self.lastLayer.forward(y, t)\n",
+    "    \n",
+    "    def accuracy(self, x, t):\n",
+    "        y = self.predict(x)\n",
+    "        y = np.argmax(y, axis=1)\n",
+    "        if t.ndim != 1:  t = np.argmax(t, axis=1)\n",
+    "        \n",
+    "        accuracy = np.sum(y == t) / float(x.shape[0])\n",
+    "        return accuracy\n",
+    "    \n",
+    "    def numerical_gradient(self, x, t):\n",
+    "        loss_W = lambda w: self.loss(x, t)\n",
+    "        \n",
+    "        grads = {}\n",
+    "        grads['W1'] = numerical_gradient(loss_W, self.param['W1'])\n",
+    "        grads['b1'] = numerical_gradient(loss_W, self.param['b1'])\n",
+    "        grads['W2'] = numerical_gradient(loss_W, self.param['W2'])\n",
+    "        grads['b2'] = numerical_gradient(loss_W, self.param['b2'])\n",
+    "        \n",
+    "        return grads\n",
+    "    \n",
+    "    def gradient(self, x, t):\n",
+    "        #forward\n",
+    "        self.loss(x, t)\n",
+    "        \n",
+    "        #backward\n",
+    "        dout = 1\n",
+    "        dout = self.lastLayer.backward(dout)\n",
+    "        \n",
+    "        layers = list(self.layers.values())\n",
+    "        layers.reverse()\n",
+    "        \n",
+    "        for layer in layers:\n",
+    "            dout = layer.backward(dout)\n",
+    "            \n",
+    "        grads = {}\n",
+    "        grads['W1'] = self.layers['Affine1'].dW\n",
+    "        grads['b1'] = self.layers['Affine1'].db\n",
+    "        grads['W2'] = self.layers['Affine2'].dW\n",
+    "        grads['b2'] = self.layers['Affine2'].db\n",
+    "        \n",
+    "        return grads\n",
+    "    \n",
+    "\n",
+    "            \n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1:4.6102471038256066e-10\n",
+      "b1:2.7781084397298988e-09\n",
+      "W2:6.214658414126583e-09\n",
+      "b2:1.405825680880768e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.7.3\n",
+    "\n",
+    "import sys, os \n",
+    "sys.path.append(os.pardir)\n",
+    "import numpy as np\n",
+    "from dataset.mnist import load_mnist \n",
+    "#from two_layer_net import TwoLayerNet\n",
+    "\n",
+    "# データの読み込み\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)\n",
+    "\n",
+    "network = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)\n",
+    "\n",
+    "x_batch = x_train[:3]\n",
+    "t_batch = t_train[:3]\n",
+    "\n",
+    "grad_numerical = network.numerical_gradient(x_batch, t_batch) \n",
+    "grad_backprop = network.gradient(x_batch, t_batch)\n",
+    "\n",
+    "# 各重みの絶対誤差の平均を求める\n",
+    "\n",
+    "for key in grad_numerical.keys():\n",
+    "    diff = np.average( np.abs(grad_backprop[key] - grad_numerical[key]) ) \n",
+    "    print(key + \":\" + str(diff))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16455 0.172\n",
+      "0.9011666666666667 0.905\n",
+      "0.9203 0.9213\n",
+      "0.935 0.9351\n",
+      "0.9439833333333333 0.9441\n",
+      "0.9501333333333334 0.9476\n",
+      "0.9529833333333333 0.9504\n",
+      "0.9576 0.9528\n",
+      "0.96225 0.9568\n",
+      "0.9659 0.96\n",
+      "0.9674833333333334 0.9621\n",
+      "0.9695666666666667 0.9628\n",
+      "0.9727 0.9666\n",
+      "0.9741 0.9686\n",
+      "0.9752166666666666 0.9681\n",
+      "0.9764333333333334 0.9687\n",
+      "0.9775833333333334 0.9679\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.7.4\n",
+    "\n",
+    "import sys, os \n",
+    "sys.path.append(os.pardir)\n",
+    "import numpy as np\n",
+    "from dataset.mnist import load_mnist \n",
+    "#from two_layer_net import TwoLayerNet\n",
+    "\n",
+    "# データの読み込み\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)\n",
+    "\n",
+    "network = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)\n",
+    "\n",
+    "iters_num = 10000\n",
+    "train_size = x_train.shape[0]\n",
+    "batch_size = 100\n",
+    "learning_rate = 0.1\n",
+    "\n",
+    "train_loss_list = []\n",
+    "train_acc_list = []\n",
+    "test_acc_list = []\n",
+    "\n",
+    "iter_per_epoch = max(train_size / batch_size, 1)\n",
+    "\n",
+    "for i in range(iters_num):\n",
+    "    batch_mask = np.random.choice(train_size, batch_size)\n",
+    "    x_batch = x_train[batch_mask]\n",
+    "    t_batch = t_train[batch_mask]\n",
+    "    \n",
+    "    grad = network.gradient(x_batch, t_batch)\n",
+    "    \n",
+    "    for key in ('W1', 'b1', 'W2', 'b2'):\n",
+    "        network.param[key] -= learning_rate * grad[key]\n",
+    "        \n",
+    "    loss = network.loss(x_batch, t_batch)\n",
+    "    train_loss_list.append(loss)\n",
+    "    \n",
+    "    if i % iter_per_epoch == 0:\n",
+    "        train_acc = network.accuracy(x_train, t_train)\n",
+    "        test_acc = network.accuracy(x_test, t_test)\n",
+    "        train_acc_list.append(train_acc)\n",
+    "        test_acc_list.append(test_acc)\n",
+    "        print(train_acc, test_acc)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# P165"
    ]
   }
  ],
